k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paygate-merchant-portal
  namespace: paygate
  labels:
    app: paygate-merchant-portal
  annotations:
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  selector:
    app: paygate-merchant-portal
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
